<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_new_day"
            android:icon="@drawable/ic_menu_new_day"
            android:title="@string/new_day" />
        <item
            android:id="@+id/nav_general"
            android:icon="@drawable/ic_menu_general"
            android:title="@string/general_ing" />
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_menu_stats"
            android:title="@string/stats" />
        <item
            android:id="@+id/nav_options"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/options" />
    </group>

</menu>
