<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    tools:context=".view.GeneralFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/general_top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/general_next_ingestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:textSize="20sp"
                tools:text="@string/general_next_ingestion" />

            <TextView
                android:id="@+id/general_now_ingestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/general_now_ingestion"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:text="now ingestion" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/general_eat_button"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/general_button_eat" />

            <Button
                android:id="@+id/general_pass_button"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:text="@string/general_button_pass" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/general_glass_imageView"
                android:layout_width="70dp"
                android:layout_height="105dp"
                app:srcCompat="@drawable/glass" />

            <LinearLayout
                android:id="@+id/general_drink_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/general_glass_imageView"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/general_drink_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/general_water"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/general_drink_count_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    tools:text="@string/general_water_count" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/general_drink_button_remove"
                        style="@style/buttonStyle"
                        android:layout_width="match_parent"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:text="@string/general_button_water_remove" />

                    <Button
                        android:id="@+id/general_drink_button_add"
                        style="@style/buttonStyle"
                        android:layout_width="match_parent"
                        android:layout_marginStart="2dp"
                        android:layout_weight="1"
                        android:text="@string/general_button_water_add" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>