<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="4dp"

    android:layout_marginRight="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/buttonColor"></LinearLayout>

        <TextView
            android:id="@+id/stats_date_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stats_date"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/stats_date_text_view"
            android:background="@color/buttonColor"></LinearLayout>

        <LinearLayout
            android:id="@+id/stats_info_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/stats_date_text_view"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/stats_weight_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/stats_week_weight" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/buttonColor"></LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stats_breakfast_text_view"
                    style="@style/stats_text"
                    android:text="@string/stats_breakfast" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/buttonColor"></LinearLayout>

                <TextView
                    android:id="@+id/stats_lunch_text_view"
                    style="@style/stats_text"
                    android:text="@string/stats_lunch" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/buttonColor"></LinearLayout>

                <TextView
                    android:id="@+id/stats_dinner_text_view"
                    style="@style/stats_text"
                    android:text="@string/stats_dinner" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/buttonColor"></LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/stats_snack1_text_view"
                    style="@style/stats_text"
                    android:text="@string/stats_snack1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/buttonColor"></LinearLayout>

                <TextView
                    android:id="@+id/stats_snack2_text_view"
                    style="@style/stats_text"
                    android:text="@string/stats_snack2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/buttonColor"></LinearLayout>

                <TextView
                    android:id="@+id/stats_water_text_view"
                    style="@style/stats_text"
                    android:text="@string/stats_water" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/stats_info_linear_layout"
            android:background="@color/buttonColor"></LinearLayout>
    </RelativeLayout>

</android.support.v7.widget.CardView>