<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    tools:context=".view.StartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:text="WelcomeText" />

        <TextView
            android:id="@+id/water_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/welcome_water"
            android:textAlignment="center"
            android:textSize="24sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/weight_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/welcome_weight"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/welcome_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="20sp" />

        </LinearLayout>

        <Button
            android:id="@+id/start_button"
            style="@style/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/welcome_button_start"
            android:textSize="20sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>